Ensure list will overlap a jQuery dialogue box.

--- a/src/ssAC.css
+++ b/src/ssAC.css
@@ -6,6 +6,7 @@
 	background-color: white;
 	border: 1px solid #ccc;
 	border-radius: 4px;
+    z-index:999;
 }
 
 div.SSAC ul {
